small fixes, because it did not compile here